# phemy

./: .gitignore  LICENSE  Package.swift  README.md  build-rust.sh  dedup-archive.py
Sources/CKordCore/: module.modulemap
Sources/CPhemyCore/: module.modulemap
Sources/KordNative/: ContentView.swift  KordNativeApp.swift
Sources/KordNative/Models/: AppSettings.swift
Sources/KordNative/Resources/: Info.plist
Sources/KordNative/Services/: AudioLevelBridge.swift  GlobalHotkeyManager.swift  KordCore.swift  RecordingManager.swift
Sources/KordNative/Views/: RecordingOverlayPanel.swift  RecordingOverlayView.swift  SettingsViewModel.swift
Sources/PhemyNative/: ContentView.swift  PhemyNativeApp.swift
Sources/PhemyNative/Models/: AppSettings.swift  HistoryEntry.swift
Sources/PhemyNative/Resources/: AppIcon.icns  Info.plist
Sources/PhemyNative/Services/: AudioLevelBridge.swift  GlobalHotkeyManager.swift  PhemyCore.swift  RecordingManager.swift
Sources/PhemyNative/Theme/: AccentTheme.swift  Spacing.swift
kord-core/: Cargo.toml  build.rs  cbindgen.toml
kord-core/include/: kord_core.h
kord-core/src/: db.rs  ffi.rs  lib.rs  settings.rs  utils.rs
kord-core/src/audio/: capture.rs  device.rs  resampler.rs  vad.rs
kord-core/src/clipboard/: paste.rs
kord-core/src/llm/: client.rs  llm_model_manager.rs  mod.rs
kord-core/src/transcription/: model_manager.rs  whisper_local.rs
phemy-core/: Cargo.toml  build.rs  cbindgen.toml
phemy-core/include/: phemy_core.h
phemy-core/src/: ffi.rs  lib.rs  settings.rs  utils.rs
scripts/: create-dmg.sh
(+25 files in other folders)
